--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,7 +14,7 @@ a:hover{
 :root {
     /* Color Palette */
     --primary-color: #8B7355;
-    --primary-dark: #6B5B47;
+    --primary-dark: #645541;
     --secondary-color: #D4AF37;
     --accent-color: #E8DDD4;
     --text-dark: #2C2C2C;
@@ -22,10 +22,10 @@ a:hover{
     --white: #FFFFFF;
     --light-bg: #F9F7F4;
     --border-color: #E5E5E5;
-    --lavender: lavender;
+    --lavender: rgb(209, 209, 227);
     
     /* Typography */
-    --font-primary: 'Playfair Display', serif;
+    --font-primary: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     --font-secondary: 'Inter', sans-serif;
     
     /* Spacing */
@@ -51,7 +51,7 @@ html {
     font-weight: 400;
     line-height: 1.6;
     color: var(--text-dark);
-    background-color: rgba(241, 221, 43, 0.25);
+    background-color: rgba(94, 87, 26, 0.5);
     overflow-x: hidden;
 }
 
@@ -110,15 +110,16 @@ p {
 }
 
 .btn-secondary {
-     background-color: rgba(210, 188, 188, 0.5);
+     background-color: rgba(210, 188, 188, 0.4);
     color: var(--primary-dark);
-   
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     border: 2px solid var(--primary-color);
 
 }
 
 .btn-secondary:hover {
-     background-color: rgba(232, 224, 224, 0.3);
+     background-color: rgba(232, 224, 224, 0.1);
     color: whitesmoke;
     transform: translateY(-2px);
     box-shadow: var(--box-shadow-hover);
@@ -146,11 +147,16 @@ p {
     justify-content: space-between;
 }
 
-.log{    text-decoration: none;
+.log{    
+    text-decoration: none;
     color: var(--primary-color);}
     
     .nav-logo {
     font-family: garamond;
+    font-weight: bold;
+}
+.nav-logo a h2{
+    color: #673009;
 }
 .nav-menu {
     display: flex;
@@ -194,7 +200,7 @@ p {
 .bar {
     width: 25px;
     height: 3px;
-    background-color: var(--primary-color);
+    background-color:#673009 ;
     margin: 3px 0;
     transition: var(--transition);
 }
