update in booking

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -330,6 +330,9 @@ p {
     transition: var(--transition);
     position: relative;
 }
+.nav-link.book-now{
+    width: 90%;
+}
 
 .nav-link:not(.btn-primary):hover {
     color: var(--primary-color);
